# slinger-api

./: .gitignore  Cargo.toml  README.md  delete_test.sh  docker-compose.yml  test_routes.py  test_routes.sh
migrations/2020-07-28-002720_create_user/: down.sql  up.sql
migrations/2020-08-26-203628_spell_book/: down.sql  up.sql
src/: auth.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
