[package]
name = "slinger-api"
version = "0.1.0"
authors = ["Jovan <suvajacjovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-web-httpauth = "0.4.1"
openssl = { version = "0.10", features = ["v110"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7"
env_logger = "0.7.1"
log = "0.4.0"
