[package]
name = "slinger-api"
version = "0.1.0"
authors = ["Jovan <suvajacjovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-redis = "0.8.2"
actix-session = "0.3.0"
actix-web-httpauth = "0.4.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", features = ["v110"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7"
env_logger = "0.7.1"
log = "0.4.0"
